--- a/service-b-simulator/.env
+++ b/service-b-simulator/.env
@@ -1,3 +1,3 @@
 GROQ_API_KEY=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
 MODEL=llama3-8b-8192
-SERVICE_A_URL=http://3.15.164.139:8080
+TARGET_URL=http://3.15.164.139:8080
